--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -69,4 +69,8 @@
       flex-direction: column;
     }
   }
-  
+  .time-is-price{
+    color: #FFB900;
+    text-align: center;
+    font-weight: 600;
+  }
