--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,27 @@
 
 /* Fonts */
 :root {
-  --default-font: "Roboto",  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --default-font: "Roboto",  system-ui, -apple-system, "Segoe UI", roboto, "Helvetica Neue", arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --heading-font: "Questrial",  sans-serif;
   --nav-font: "Noto Sans",  sans-serif;
 }
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root { 
-  --background-color: #ffffff; /* Background color for the entire website, including individual sections */
+  --background-color: #fff; /* Background color for the entire website, including individual sections */
   --default-color: #0a0f14; /* Default color used for the majority of the text content across the entire website */
   --heading-color: #0f2943; /* Color for headings, subheadings and title throughout the website */
   --accent-color: #FFB900; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
-  --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
-  --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
+  --surface-color: #fff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
+  --contrast-color: #fff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
 
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
   --nav-color: #0a0f14;  /* The default color of the main navmenu links */
   --nav-hover-color: #FFB900; /* Applied to main navmenu links when they are hovered over or active */
-  --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
-  --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
+  --nav-mobile-background-color: #fff; /* Used as the background color for mobile navigation menu */
+  --nav-dropdown-background-color: #fff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #0a0f14; /* Used for navigation links of the dropdown items in the navigation menu. */
   --nav-dropdown-hover-color: #ffa600; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
 }
@@ -30,15 +30,15 @@
 
 .light-background {
   --background-color: #faf9fb;
-  --surface-color: #ffffff;
+  --surface-color: #fff;
 }
 
 .dark-background {
   --background-color: #060606;
-  --default-color: #ffffff;
-  --heading-color: #ffffff;
+  --default-color: #fff;
+  --heading-color: #fff;
   --surface-color: #252525;
-  --contrast-color: #ffffff;
+  --contrast-color: #fff;
 }
 
 /* Smooth scroll */
@@ -46,17 +46,17 @@
   scroll-behavior: smooth;
 }
 
-/*--------------------------------------------------------------
+/* --------------------------------------------------------------
 # General Styling & Shared Classes
---------------------------------------------------------------*/
+-------------------------------------------------------------- */
 body {
   color: var(--default-color);
   background-color: var(--background-color);
   font-family: var(--default-font);
   background: linear-gradient(
     90deg,
-    rgba(255, 255, 255, 1) 70%,
-    rgba(255, 255, 255, 0) 120%
+    rgb(255 255 255 / 100%) 70%,
+    rgb(255 255 255 / 0%) 120%
   );
 }
 
@@ -81,9 +81,9 @@ h6 {
   font-family: var(--heading-font);
 }
 
-/*--------------------------------------------------------------
+/* --------------------------------------------------------------
 # Global Header
---------------------------------------------------------------*/
+-------------------------------------------------------------- */
 .header {
   color: var(--default-color);
   background-color: var(--background-color);
@@ -96,7 +96,7 @@ h6 {
   background: var(--surface-color);
   border-radius: 50px;
   padding: 5px 25px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 15px rgb(0 0 0 / 10%);
 }
 
 .header .logo {
@@ -136,7 +136,7 @@ h6 {
   line-height: 0px;
 }
 
-@media (max-width: 1200px) {
+@media (width <= 1200px) {
   .header {
     padding-top: 10px;
   }
@@ -160,11 +160,12 @@ h6 {
   }
 }
 
-/*--------------------------------------------------------------
+/* --------------------------------------------------------------
 # Navigation Menu
---------------------------------------------------------------*/
+-------------------------------------------------------------- */
+
 /* Navmenu - Desktop */
-@media (min-width: 1200px) {
+@media (width >= 1200px) {
   .navmenu {
     padding: 0;
   }
@@ -226,7 +227,7 @@ h6 {
     transition: 0.3s;
     border-radius: 4px;
     z-index: 99;
-    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 30px rgb(0 0 0 / 10%);
   }
 
   .navmenu .dropdown ul li {
@@ -271,7 +272,7 @@ h6 {
 }
 
 /* Navmenu - Mobile */
-@media (max-width: 1199px) {
+@media (width <= 1199px) {
   .mobile-nav-toggle {
     color: var(--nav-color);
     font-size: 28px;
@@ -290,7 +291,7 @@ h6 {
     display: none;
     list-style: none;
     position: absolute;
-    inset: 60px 20px 20px 20px;
+    inset: 60px 20px 20px;
     padding: 10px 0;
     margin: 0;
     border-radius: 6px;
@@ -298,7 +299,7 @@ h6 {
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
-    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 30px rgb(0 0 0 / 10%);
   }
 
   .navmenu a,
@@ -362,12 +363,12 @@ h6 {
   }
 
   .navmenu .dropdown ul ul {
-    background-color: rgba(33, 37, 41, 0.1);
+    background-color: rgb(33 37 41 / 10%);
   }
 
   .navmenu .dropdown>.dropdown-active {
     display: block;
-    background-color: rgba(33, 37, 41, 0.03);
+    background-color: rgb(33 37 41 / 3%);
   }
 
   .mobile-nav-active {
@@ -388,7 +389,7 @@ h6 {
     position: fixed;
     overflow: hidden;
     inset: 0;
-    background: rgba(33, 37, 41, 0.8);
+    background: rgb(33 37 41 / 80%);
     transition: 0.3s;
   }
 
@@ -397,16 +398,16 @@ h6 {
   }
 }
 
-/*--------------------------------------------------------------
+/* --------------------------------------------------------------
 # Global Footer
---------------------------------------------------------------*/
+-------------------------------------------------------------- */
 .footer {
   color: var(--default-color);
   background-color: var(--background-color);
   font-size: 14px;
   padding: 40px 0;
   position: relative;
-  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 5px 25px rgb(0 0 0 / 5%);
 }
 
 .footer .copyright p {
@@ -442,9 +443,9 @@ h6 {
   text-align: center;
 }
 
-/*--------------------------------------------------------------
+/* --------------------------------------------------------------
 # Scroll Top Button
---------------------------------------------------------------*/
+-------------------------------------------------------------- */
 .scroll-top {
   position: fixed;
   visibility: hidden;
@@ -476,19 +477,19 @@ h6 {
   bottom: 15px;
 }
 
-/*--------------------------------------------------------------
+/* --------------------------------------------------------------
 # Disable aos animation delay on mobile devices
---------------------------------------------------------------*/
-@media screen and (max-width: 768px) {
+-------------------------------------------------------------- */
+@media screen and (width <= 768px) {
   [data-aos-delay] {
     transition-delay: 0 !important;
   }
 }
 
 
-/*--------------------------------------------------------------
+/* --------------------------------------------------------------
 # Global Sections
---------------------------------------------------------------*/
+-------------------------------------------------------------- */
 section,
 .section {
   color: var(--default-color);
@@ -498,17 +499,16 @@ section,
   overflow: clip;
 }
 
-@media (max-width: 1199px) {
-
+@media (width <= 1199px) {
   section,
   .section {
     scroll-margin-top: 66px;
   }
 }
 
-/*--------------------------------------------------------------
+/* --------------------------------------------------------------
 # Global Section Titles
---------------------------------------------------------------*/
+-------------------------------------------------------------- */
 .section-title {
   color: #FFB900;
   text-align: center;
@@ -521,7 +521,7 @@ section,
   font-weight: 700;
   margin-bottom: 10px;
   background: linear-gradient(120deg, var(--accent-color));
-  -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
   position: relative;
@@ -548,7 +548,7 @@ section,
   line-height: 1.8;
 }
 
-@media (max-width: 768px) {
+@media (width <= 768px) {
   .section-title h2 {
     font-size: 32px;
   }
