--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,18 +2,20 @@
 .about .about-image {
   position: relative;
 }
+
 .section-title h2{
  color: #FFB900;
 }
+
 .about .about-image img {
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 30px rgb(0 0 0 / 10%);
 }
 
 .about .about-content {
   padding-left: 2rem;
 }
 
-@media (max-width: 991.98px) {
+@media (width <= 991.98px) {
   .about .about-content {
     padding-left: 0;
     margin-top: 3rem;
@@ -45,7 +47,7 @@
   padding: 2rem;
   background-color: var(--surface-color);
   border-radius: 1rem;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 30px rgb(0 0 0 / 5%);
 }
 
 .about .personal-info .info-item {
@@ -68,6 +70,7 @@
   margin-top: 1rem;
   display:flex;
 }
+
 .about .social a{
   list-style: none;
   text-decoration: none;
@@ -80,15 +83,15 @@
   width:35px;
   height:35px;
   border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
+  border-radius: 50%;
+  border-radius: 50%;
+  border-radius: 50%;
+  border-radius: 50%;
   margin-right:0.6rem;
   transition: all .3s ease;
-  -webkit-transition: all .3s ease;
-  -moz-transition: all .3s ease;
-  -ms-transition: all .3s ease;
-  -o-transition: all .3s ease;
+  transition: all .3s ease;
+  transition: all .3s ease;
+  transition: all .3s ease;
+  transition: all .3s ease;
 }
 
