--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -4,8 +4,8 @@
     max-width: 700px;
     margin: 50px auto;
     padding: 40px;
-    background: #ffffff;
-    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    background: #fff;
+    box-shadow: 0 8px 24px rgb(0 0 0 / 10%);
     border-radius: 12px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
@@ -64,11 +64,12 @@
   }
   
   /* Responsive */
-  @media (max-width: 600px) {
+  @media (width <= 600px) {
     .contact-form .input-group {
       flex-direction: column;
     }
   }
+
   .time-is-price{
     color: #FFB900;
     text-align: center;
