--- a/src/App.css
+++ b/src/App.css
@@ -53,11 +53,11 @@ body {
   color: var(--default-color);
   background-color: var(--background-color);
   font-family: var(--default-font);
-  background: linear-gradient(
-    90deg,
-    rgb(255 255 255 / 100%) 70%,
-    rgb(255 255 255 / 0%) 120%
-  );
+ background: linear-gradient(
+  90deg,
+  rgba(255, 255, 255, 1) 70%,
+  rgba(255, 255, 255, 0) 120%
+);
 }
 
 a {
@@ -96,7 +96,8 @@ h6 {
   background: var(--surface-color);
   border-radius: 50px;
   padding: 5px 25px;
-  box-shadow: 0 2px 15px rgb(0 0 0 / 10%);
+ box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+
 }
 
 .header .logo {
@@ -227,7 +228,8 @@ h6 {
     transition: 0.3s;
     border-radius: 4px;
     z-index: 99;
-    box-shadow: 0 0 30px rgb(0 0 0 / 10%);
+   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+
   }
 
   .navmenu .dropdown ul li {
@@ -299,7 +301,8 @@ h6 {
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
-    box-shadow: 0 0 30px rgb(0 0 0 / 10%);
+   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+
   }
 
   .navmenu a,
@@ -363,12 +366,14 @@ h6 {
   }
 
   .navmenu .dropdown ul ul {
-    background-color: rgb(33 37 41 / 10%);
+    background-color: rgba(33, 37, 41, 0.1);
+
   }
 
   .navmenu .dropdown>.dropdown-active {
     display: block;
-    background-color: rgb(33 37 41 / 3%);
+   background-color: rgba(33, 37, 41, 0.1);
+
   }
 
   .mobile-nav-active {
@@ -389,7 +394,7 @@ h6 {
     position: fixed;
     overflow: hidden;
     inset: 0;
-    background: rgb(33 37 41 / 80%);
+   background: rgba(33, 37, 41, 0.8);
     transition: 0.3s;
   }
 
@@ -407,7 +412,8 @@ h6 {
   font-size: 14px;
   padding: 40px 0;
   position: relative;
-  box-shadow: 0 5px 25px rgb(0 0 0 / 5%);
+box-shadow: 0 5px 25px rgba(0, 0, 0, 0.05);
+
 }
 
 .footer .copyright p {
