--- a/src/components/ResumeSection.css
+++ b/src/components/ResumeSection.css
@@ -15,7 +15,8 @@
   padding: 1.5rem;
   border-left: 5px solid #ffc107;
   border-radius: 10px;
-  box-shadow: 0 4px 10px rgb(0 0 0 / 6%);
+box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
+
   transition: all 0.4s ease;
 }
 
