--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(
-    90deg,
-    rgb(255 255 255 / 100%) 70%,
-    rgb(255 255 255 / 0%) 120%
-  );
+ background: linear-gradient(
+  90deg,
+  rgba(255, 255, 255, 1) 70%,
+  rgba(255, 255, 255, 0) 120%
+);
+
 }
 
 code {
